--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>jquery插件类 - 单页全屏类</title>
+  <title>个人简历</title>
 
   <!-- If you are using CSS version, only link these 2 files, you may add app.css to use for your overrides if you like. -->
   <link rel="shortcut icon" href="img/icon.png">
@@ -17,7 +17,7 @@
 	<nav class="top-bar show-for-medium-up" data-topbar>
 
 	  <ul class="title-area">
-	    <li class="name"><h1><a href="#">jquery插件类 - 单页全屏类</a></h1></li>
+	    <li class="name"><h1><a href="#">个人简历</a></h1></li>
 	    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
 	  </ul>
 
@@ -29,6 +29,7 @@
 
 				<li class="has-dropdown"><a href="#">网站导航</a>
 	        <ul class="dropdown js-menu">
+
 	          <li class="has-dropdown"><a href="#">网站推荐</a>
 	            <ul class="dropdown">
 			          <li><a href="index.html">前端大杂烩</a></li>
@@ -49,7 +50,6 @@
 			      </li>
 	        </ul>
 	      </li>
-
 	      <li class="divider"></li>
 
 	      <li class="has-dropdown"><a href="#">Settings</a>
@@ -82,7 +82,7 @@
 	        <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
 	      </section>
 	      <section class="middle tab-bar-section">
-	        <h1 class="title">jquery插件类 - 单页全屏类</h1>
+	        <h1 class="title">招聘网</h1>
 	      </section>
 	    </nav>
 
@@ -94,23 +94,6 @@
 
 
 	    <section class="main-section">
-	      <div class="row" data-equalizer>
-					<div class="small-12 large-4 columns panel" data-equalizer-watch>
-						<a href="http://nick-jonas.github.io/windows/" target="_blank"><h3 class="intro-title">Windows</h3></a>
-						<p class="intro-max-height">单屏滚动的插件，感兴趣的可以去使用，使用非常简单。</p>
-						<a href="http://nick-jonas.github.io/windows/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
-					</div>
-					<div class="small-12 large-4 columns panel" data-equalizer-watch>
-						<a href="http://alvarotrigo.com/fullPage/" target="_blank"><h3 class="intro-title">Full Page</h3></a>
-						<p class="intro-max-height">非常喜欢full page这个插件，源于自己喜欢这种单屏幕滚动的视觉体验吧，使用非常简单而且多样，可以自己去体验下官网的demo，自己的一个项目也使用了这个插件:<a href="http://webgltang.sinaapp.com/">WebGL Study。</a></p>
-						<a href="http://alvarotrigo.com/fullPage/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
-					</div>
-					<div class="small-12 large-4 columns panel" data-equalizer-watch>
-						<a href="http://johnpolacek.github.io/scrollorama/" target="_blank"><h3 class="intro-title">Scrollorama</h3></a>
-						<p class="intro-max-height">这个并不是单屏滚动的插件，但是也把它放在了这个地方。它主要是用来监控滚动事件然后做出反应，在页面滚动的时候设置元素的淡入淡出、翻转等等的效果也很不错的。</p>
-						<a href="http://johnpolacek.github.io/scrollorama/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
-					</div>
-				</div>
 
 	    </section>
 
