--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	      <li class="divider"></li>
 
 				<li class="has-dropdown"><a href="#">网站导航</a>
-	        <ul class="dropdown">
+	        <ul class="dropdown js-menu">
 
 	          <li class="has-dropdown"><a href="#">网站推荐</a>
 	            <ul class="dropdown">
@@ -41,6 +41,7 @@
 	            </ul>
 	          </li>
 	          <li class="divider"></li>
+
 						<li class="has-dropdown">
 			      	<a href="#">JQUERY插件</a>
 			        <ul class="dropdown">
@@ -48,6 +49,9 @@
 			          <li><a href="jquery-plugin2.html">轮播类</a></li>
 			          <li><a href="jquery-plugin3.html">单页全屏类</a></li>
 			        </ul>
+			      </li>
+			      <li>
+			      	<a href="resume.html">个人简历</a>
 			      </li>
 	        </ul>
 	      </li>
