resume page main

--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/vendor/modernizr.js"></script>
 </head>
-<body>
+<body class="resume">
 	<nav class="top-bar show-for-medium-up" data-topbar>
 
 	  <ul class="title-area">
@@ -82,7 +82,7 @@
 	        <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
 	      </section>
 	      <section class="middle tab-bar-section">
-	        <h1 class="title">招聘网</h1>
+	        <h1 class="title">个人简历</h1>
 	      </section>
 	    </nav>
 
@@ -94,7 +94,95 @@
 
 
 	    <section class="main-section">
-
+				<div class="row">
+					<div class="small-12 columns text-left">
+						<h3 class="intro-title">个人资料</h3>
+					</div>
+					<div class="small-4 large-2 columns">
+						<p>姓名</p>
+					</div>
+					<div class="small-8 large-10 columns">
+						<p>唐泽雄</p>
+					</div>
+					<div class="small-4 large-2 columns">
+						<p>出生日期</p>
+					</div>
+					<div class="small-8 large-10 columns">
+						<p>1991.08.28</p>
+					</div>
+					<div class="small-4 large-2 columns">
+						<p>学校专业</p>
+					</div>
+					<div class="small-8 large-10 columns">
+						<p>中山大学软件学院软件工程专业（通信软件方向）</p>
+					</div>
+					<div class="small-4 large-2 columns">
+						<p>学历</p>
+					</div>
+					<div class="small-8 large-10 columns">
+						<p>本科</p>
+					</div>
+					<div class="small-4 large-2 columns">
+						<p>移动电话</p>
+					</div>
+					<div class="small-8 large-10 columns">
+						<p>15915960801</p>
+					</div>
+					<div class="small-4 large-2 columns">
+						<p>电子邮箱</p>
+					</div>
+					<div class="small-8 large-10 columns">
+						<p>476490767@qq.com</p>
+					</div>
+					<div class="small-4 large-2 columns">
+						<p>求职意向：</p>
+					</div>
+					<div class="small-8 large-10 columns">
+						<p>前端开发工程师</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="small-12 columns text-left">
+						<h3 class="intro-title">专业技能</h3>
+						<ol>
+							<li><p>熟练掌握HTML5、CSS3(Less,Scss)、JavaScript(jQuery)等Web前端语言</p></li>
+							<li><p>熟悉运用Bootstrap3、Foundation5、jQuery mobile等Web前端开发框架</p></li>
+							<li><p>熟悉C、C++、java等程序设计语言，对PHP、Ruby、Python等web服务端语言有了解</p></li>
+							<li><p>熟悉各项Office办公软件，熟悉Photoshop、Fireworks、Github的使用</p></li>
+							<li><p>英语水平：通过国家六级英语考试</p></li>
+							<li><p>学习能力良好，善于合作，责任心强</p></li>
+						</ol>
+					</div>
+				</div>
+				<div class="row">
+					<div class="small-12 columns text-left">
+						<h3 class="intro-title">项目经验</h3>
+						<ol>
+							<li>
+								<p>
+									在深圳精准分众传媒有限公司担任移动前端开发工程师，从事移动设备前端页面的制作。项目如 <a href="http://cody1991.github.io/weishangcheng/" target="_blank">微商城</a>
+								</p>
+							</li>
+							<li>
+								<p>
+									毕业设计：基于WebGL的网页三维图形绘制方法研究 ，项目地址：<a href="http://cody1991.github.io/webgltang/" target="_blank">WebGL Study</a>，利用WebGL语言和Three.js框架来开发Web前端的三维图形制作
+								</p>
+							</li>
+							<li>
+								<p>软件工程专业综合实训--运用ROR和敏捷开发技术开发一个网上书城。以Agile的方式快速开发一个简单的网上书城，包括消费者浏览、搜索、挑选、购买书籍，和运营者管理销售、库存、营销等功能</p>
+							</li>
+							<li>
+								<p>软件工程专业中级实训--进行GridWorld图形化环境下可视对象在二维网络中的交互的设计</p>
+							</li>
+							<li>
+								<p>软件工程专业初级实训--开发一个基于命令行的议程管理系统。本项目主要是开发一个系统，使得已注册用户可添加、删除、查询系统中记录的会议安排，另外系统还提供新用户注册、清除某一用户所有会议安排等管理功能</p>
+							</li>
+							<li>
+								<p>“IT文化俱乐部”IT-ROUTER纸质和网页期刊的编辑。学习到了基础的Web编程知识和期刊制作知识，学习到了如何利用PS修改图像素材和利用Coreldraw进行排版的技术</p>
+							</li>
+						</ol>
+					</div>
+				</div>
 	    </section>
 
 	  <a class="exit-off-canvas"></a>
