--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
 			          <li><a href="jquery-plugin3.html">单页全屏类</a></li>
 			        </ul>
 			      </li>
-			      <li>
-			      	<a href="resume.html">个人简历</a>
+			      <li class="has-dropdown">
+			      	<a href="#">个人信息</a>
+			        <ul class="dropdown">
+			          <li><a href="resume.html">个人简历</a></li>
+			          <li><a href="music.html">我的音乐</a></li>
+			        </ul>
 			      </li>
 	        </ul>
 	      </li>
@@ -180,7 +184,7 @@
 	  <a class="close-reveal-modal">&#215;</a>
 	</div>
 
-
+	<div class="github_page"><a href="https://github.com/cody1991/cody1991.github.io"></a></div>
 
 	<script type='text/javascript'>
 		document.write(unescape("%3Cscript%20src='"+
@@ -194,5 +198,6 @@
     $(document).foundation();
   </script>
   <script src="js/left-off-canvas-menu.js"></script>
+  <script src="js/basejs.js"></script>
 </body>
 </html>
