--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>招聘网</title>
+  <title>我的音乐</title>
 
   <!-- If you are using CSS version, only link these 2 files, you may add app.css to use for your overrides if you like. -->
   <link rel="shortcut icon" href="img/icon.png">
@@ -18,7 +18,7 @@
 	<nav class="top-bar show-for-medium-up" data-topbar>
 
 	  <ul class="title-area">
-	    <li class="name"><h1><a href="#">招聘网</a></h1></li>
+	    <li class="name"><h1><a href="#">我的音乐</a></h1></li>
 	    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
 	  </ul>
 
@@ -46,8 +46,12 @@
 			          <li><a href="jquery-plugin3.html">单页全屏类</a></li>
 			        </ul>
 			      </li>
-			      <li>
-			      	<a href="resume.html">个人简历</a>
+						<li class="has-dropdown">
+			      	<a href="#">个人信息</a>
+			        <ul class="dropdown">
+			          <li><a href="resume.html">个人简历</a></li>
+			          <li><a href="music.html">我的音乐</a></li>
+			        </ul>
 			      </li>
 	        </ul>
 	      </li>
@@ -83,7 +87,7 @@
 	        <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
 	      </section>
 	      <section class="middle tab-bar-section">
-	        <h1 class="title">招聘网</h1>
+	        <h1 class="title">我的音乐</h1>
 	      </section>
 	    </nav>
 
@@ -176,6 +180,7 @@
 		</form>
 	  <a class="close-reveal-modal">&#215;</a>
 	</div>
+	<div class="github_page"><a href="https://github.com/cody1991/cody1991.github.io"></a></div>
   <script src="js/vendor/jquery.js"></script>
   <script src="js/foundation.min.js"></script>
   <script>
@@ -184,5 +189,6 @@
   <script src="js/left-off-canvas-menu.js"></script>
 	<script src="js/jquery-ui-1.8.17.custom.min.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/basejs.js"></script>
 </body>
 </html>
