modify the music page

--- a/music.html
+++ b/music.html
@@ -188,7 +188,7 @@
   </script>
   <script src="js/left-off-canvas-menu.js"></script>
 	<script src="js/jquery-ui-1.8.17.custom.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="js/music_script.js"></script>
 	<script src="js/basejs.js"></script>
 </body>
 </html>
