change resume page

--- a/resume.html
+++ b/resume.html
@@ -152,7 +152,7 @@
 							<li><p>熟练掌握HTML5、CSS3(Less,Scss)、JavaScript(jQuery)等Web前端语言</p></li>
 							<li><p>熟悉运用Bootstrap3、Foundation5、jQuery mobile等Web前端开发框架</p></li>
 							<li><p>熟悉C、C++、java等程序设计语言，对PHP、Ruby、Python等web服务端语言有了解</p></li>
-							<li><p>熟悉各项Office办公软件，熟悉Photoshop、Fireworks、Github的使用</p></li>
+							<li><p>熟悉Github、Photoshop、Fireworks的使用，有个人的Github Pages</p></li>
 							<li><p>英语水平：通过国家六级英语考试</p></li>
 							<li><p>学习能力良好，善于合作，责任心强</p></li>
 						</ol>
