--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
 
 	<div class="github_page"><a href="https://github.com/cody1991/cody1991.github.io"></a></div>
 
+
+	<audio src="Secret_Base.mp3" controls autoplay  loop class="bgm"></audio>
 	<script type='text/javascript'>
 		document.write(unescape("%3Cscript%20src='"+
 		(document.location.protocol=='https:'?
