change some style

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 						<a href="http://css3lib.alloyteam.com/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
 					</div>
 					<div class="small-12 large-4 columns panel end" data-equalizer-watch>
-						<a href="http://ecd.tencent.com/css3/tools.html" target="_blank"><h3 class="intro-title">Whycss.com</h3></a>
+						<a href="http://whycss.com/" target="_blank"><h3 class="intro-title">Whycss.com</h3></a>
 						<p class="intro-max-height">"各位朋友如果细心一点会发现在我博客的底部会有一个前端收藏栏目，里面会放一些我遇到的有价值的前端资源链接，但是随着时间的推移，可能积累的资源越来越多，全部放在底部肯定不现实，于是乎，在这个月初，打算把所有积累的前端资源网址做一个聚合的网站，一来可以方便自己的查阅，二来也是给业界各位前端朋友的一些参考。"这段话摘自<a href="http://www.smallni.com/front-end-engineer-site-navigation/">whycss.com作者的博客</a>，很明显可以看出，这个网站也是出于同样的目的。</p>
-						<a href="http://ecd.tencent.com/css3/tools.html" class="button round learn-more" target="_blank">了解更多 &gt;</a>
+						<a href="http://whycss.com/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
 					</div>
 				</div>
 
