add my own page

--- a/index.html
+++ b/index.html
@@ -1,205 +1,244 @@
 <!DOCTYPE html>
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
-<html class="no-js" lang="en" >
+<html class="no-js" lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>前端大杂烩</title>
+    <title>前端大杂烩</title>
 
-  <!-- If you are using CSS version, only link these 2 files, you may add app.css to use for your overrides if you like. -->
-  <link rel="shortcut icon" href="img/icon.png">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/foundation.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/vendor/modernizr.js"></script>
+    <!-- If you are using CSS version, only link these 2 files, you may add app.css to use for your overrides if you like. -->
+    <link rel="shortcut icon" href="img/icon.png">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/foundation.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/vendor/modernizr.js"></script>
 </head>
+
 <body>
-	<script type="text/javascript">
-		var WRInitTime=(new Date()).getTime();
-	</script>
-	<nav class="top-bar show-for-medium-up" data-topbar>
+    <script type="text/javascript">
+    var WRInitTime = (new Date()).getTime();
+    </script>
+    <nav class="top-bar show-for-medium-up" data-topbar>
 
-	  <ul class="title-area">
-	    <li class="name"><h1><a href="#">前端大杂烩</a></h1></li>
-	    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-	  </ul>
-
-
-	  <section class="top-bar-section">
-
-	    <ul class="right">
-	      <li class="divider"></li>
-
-				<li class="has-dropdown"><a href="#">网站导航</a>
-	        <ul class="dropdown js-menu">
-
-	          <li class="has-dropdown"><a href="#">网站推荐</a>
-	            <ul class="dropdown">
-			          <li><a href="index.html">前端大杂烩</a></li>
-			          <li><a href="work.html">招聘网</a></li>
-	            </ul>
-	          </li>
-	          <li class="divider"></li>
-
-						<li class="has-dropdown">
-			      	<a href="#">JQUERY插件</a>
-			        <ul class="dropdown">
-			          <li><a href="jquery-plugin1.html">导航类</a></li>
-			          <li><a href="jquery-plugin2.html">轮播类</a></li>
-			          <li><a href="jquery-plugin3.html">单页全屏类</a></li>
-			        </ul>
-			      </li>
-			      <li class="has-dropdown">
-			      	<a href="#">个人信息</a>
-			        <ul class="dropdown">
-			          <li><a href="resume.html">个人简历</a></li>
-			          <li><a href="music.html">我的音乐</a></li>
-			        </ul>
-			      </li>
-	        </ul>
-	      </li>
-
-	      <li class="divider"></li>
-
-				<li class="has-dropdown"><a href="#">Settings</a>
-	        <ul class="dropdown">
-	          <li>
-	          	<a href="myself.html">个人信息</a>
-	          </li>
-
-	          <li>
-	          	<a href="#" data-reveal-id="login-in">登陆</a>
-	          </li>
-
-	          <li>
-	          	<a href="#" data-reveal-id="login-up">注册</a>
-	          </li>
-
-						<li>
-	          	<a href="#" data-reveal-id="login-out">注销</a>
-	          </li>
-	        </ul>
-	      </li>
-	    </ul>
-	  </section>
-	</nav>
-	<div class="off-canvas-wrap" data-offcanvas>
-	  <div class="inner-wrap">
-
-	    <nav class="tab-bar show-for-small-only">
-	      <section class="left-small">
-	        <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
-	      </section>
-	      <section class="middle tab-bar-section">
-	        <h1 class="title">前端大杂烩</h1>
-	      </section>
-	    </nav>
-
-	    <aside class="left-off-canvas-menu">
-	      <ul class="off-canvas-list">
-					<!-- jquery 添加 导航 项目-->
-	      </ul>
-	    </aside>
+        <ul class="title-area">
+            <li class="name">
+                <h1><a href="#">前端大杂烩</a>
+                </h1>
+            </li>
+            <li class="toggle-topbar menu-icon">
+                <a href="#">
+                    <span>Menu</span>
+                </a>
+            </li>
+        </ul>
 
 
-	    <section class="main-section">
-	      <div class="row" data-equalizer>
-					<div class="small-12 large-4 columns panel" data-equalizer-watch>
-						<a href="http://tympanus.net/codrops/" target="_blank"><h3 class="intro-title">Codrops</h3></a>
-						<p class="intro-max-height">很喜欢codrops这个网站，里面汇集了不少国外的优秀前端开发工程师，网站有许多他们自己开发出来的东西。很多酷炫的效果，如果能在自己的页面上添加上去，肯定让自己的页面加分不少。而还有一个推荐它的更重要的原因是，许多案例他们都提供了或长或短的教程，并且提供了免费源代码的下载，真的是一个学习和找灵感的好地方。</p>
-						<a href="http://tympanus.net/codrops/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
-					</div>
-					<div class="small-12 large-4 columns panel" data-equalizer-watch>
-						<a href="http://www.noupe.com/" target="_blank"><h3 class="intro-title">Noupe</h3></a>
-						<p class="intro-max-height">这个网站其实性质和codrops差不多,也是提供了不少的前端学习案例以及免费的代码下载。其实外国很多这样的学习网站，这也是我喜欢逛外国网站的原因之一。开源，分享。不谈论网页的质量，国内不少的网页设置各种积分限制，没有完整的学习教程，这些就有很大的差距了。（只是个人观点）</p>
-						<a href="http://www.noupe.com/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
-					</div>
-					<div class="small-12 large-4 columns panel" data-equalizer-watch>
-						<a href="http://ecd.tencent.com/css3/tools.html" target="_blank"><h3 class="intro-title">动画工具</h3></a>
-						<p class="intro-max-height">CSS3现在在前端来制作动画越来越常见了，而这个网页工具能让你更好的去制作自己的动画。通过简单的滑动条拖动，最后生成代码，它里面还包含了动画库，可以从中需找灵感。另外你也可以自己拖曳图片上去来调整动画效果。这个网站之下还有案例分享和动画手册，真的是学习CSS3动画以及寻找灵感的好地方。</p>
-						<a href="http://ecd.tencent.com/css3/tools.html" class="button round learn-more" target="_blank">了解更多 &gt;</a>
-					</div>
-				</div>
-	      <div class="row" data-equalizer>
-					<div class="small-12 large-4 columns panel" data-equalizer-watch>
-						<a href="http://css3lib.alloyteam.com/" target="_blank"><h3 class="intro-title">CSS3 UI 库</h3></a>
-						<p class="intro-max-height">说到CSS3 UI 库的话，还推荐一下这个网页。它里面有很多的CSS3动画特效，而且都很酷炫。其实它很多的案例都是来自上面所说的codrops网站，感兴趣的可以去看看</p>
-						<a href="http://css3lib.alloyteam.com/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
-					</div>
-					<div class="small-12 large-4 columns panel end" data-equalizer-watch>
-						<a href="http://whycss.com/" target="_blank"><h3 class="intro-title">Whycss.com</h3></a>
-						<p class="intro-max-height">"各位朋友如果细心一点会发现在我博客的底部会有一个前端收藏栏目，里面会放一些我遇到的有价值的前端资源链接，但是随着时间的推移，可能积累的资源越来越多，全部放在底部肯定不现实，于是乎，在这个月初，打算把所有积累的前端资源网址做一个聚合的网站，一来可以方便自己的查阅，二来也是给业界各位前端朋友的一些参考。"这段话摘自<a href="http://www.smallni.com/front-end-engineer-site-navigation/">whycss.com作者的博客</a>，很明显可以看出，这个网站也是出于同样的目的。</p>
-						<a href="http://whycss.com/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
-					</div>
-				</div>
+        <section class="top-bar-section">
 
-	    </section>
+            <ul class="right">
+                <li class="divider"></li>
 
-	  <a class="exit-off-canvas"></a>
+                <li class="has-dropdown"><a href="#">网站导航</a>
+                    <ul class="dropdown js-menu">
 
-	  </div>
-	</div>
+                        <li class="has-dropdown"><a href="#">网站推荐</a>
+                            <ul class="dropdown">
+                                <li><a href="index.html">前端大杂烩</a>
+                                </li>
+                                <li><a href="work.html">招聘网</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="divider"></li>
 
-	<div id="login-in" class="reveal-modal" data-reveal>
-		<form data-abide>
-		  <div class="name-field">
-		    <label>用户名：
-		      <input type="text" required pattern="[a-zA-Z]+" placeholder="请输入正确的用户名">
-		    </label>
-		    <small class="error">请输入正确的用户名</small>
-		  </div>
-		  <div class="password-field">
-		    <label>密码：
-		      <input type="password" required placeholder="请输入正确的密码">
-		    </label>
-		    <small class="error">请输入正确的密码</small>
-		  </div>
-		  <button type="submit" class="expand">登陆</button>
-		</form>
-	  <a class="close-reveal-modal">&#215;</a>
-	</div>
-	<div id="login-up" class="reveal-modal" data-reveal>
-		<form data-abide>
-		  <div class="name-field">
-		    <label>用户名：
-		      <input type="text" required pattern="[a-zA-Z]+" placeholder="请输入正确的用户名" id="password">
-		    </label>
-		    <small class="error">请输入注册的用户名</small>
-		  </div>
-		  <div class="password-field">
-		    <label>密码：
-		      <input type="password" required placeholder="请输入正确的密码" pattern="[a-zA-Z]+">
-		    </label>
-		    <small class="error">请输入密码</small>
-		  </div>
-		  <div class="password-confirmation-field">
-		    <label>密码：
-		      <input type="password" required placeholder="请再次输入密码" pattern="[a-zA-Z]+" data-equalto="password">
-		    </label>
-		    <small class="error">请保持和上面输入的密码一致</small>
-		  </div>
-		  <button type="submit" class="expand">注册</button>
-		</form>
-	  <a class="close-reveal-modal">&#215;</a>
-	</div>
+                        <li class="has-dropdown">
+                            <a href="#">JQUERY插件</a>
+                            <ul class="dropdown">
+                                <li><a href="jquery-plugin1.html">导航类</a>
+                                </li>
+                                <li><a href="jquery-plugin2.html">轮播类</a>
+                                </li>
+                                <li><a href="jquery-plugin3.html">单页全屏类</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="has-dropdown">
+                            <a href="#">个人信息</a>
+                            <ul class="dropdown">
+                                <li><a href="resume.html">个人简历</a>
+                                </li>
+                                <li><a href="music.html">我的音乐</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
 
-	<div class="github_page"><a href="https://github.com/cody1991/cody1991.github.io"></a></div>
+                <li class="divider"></li>
+
+                <li class="has-dropdown"><a href="#">Settings</a>
+                    <ul class="dropdown">
+                        <li>
+                            <a href="myself.html">个人信息</a>
+                        </li>
+
+                        <li>
+                            <a href="#" data-reveal-id="login-in">登陆</a>
+                        </li>
+
+                        <li>
+                            <a href="#" data-reveal-id="login-up">注册</a>
+                        </li>
+
+                        <li>
+                            <a href="#" data-reveal-id="login-out">注销</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+    </nav>
+    <div class="off-canvas-wrap" data-offcanvas>
+        <div class="inner-wrap">
+
+            <nav class="tab-bar show-for-small-only">
+                <section class="left-small">
+                    <a class="left-off-canvas-toggle menu-icon" href="#">
+                        <span></span>
+                    </a>
+                </section>
+                <section class="middle tab-bar-section">
+                    <h1 class="title">前端大杂烩</h1>
+                </section>
+            </nav>
+
+            <aside class="left-off-canvas-menu">
+                <ul class="off-canvas-list">
+                    <!-- jquery 添加 导航 项目-->
+                </ul>
+            </aside>
 
 
-	<audio src="Secret_Base.mp3" controls autoplay  loop class="bgm"></audio>
-	<script type='text/javascript'>
-		document.write(unescape("%3Cscript%20src='"+
-		(document.location.protocol=='https:'?
-		"https://cdnssl.clicktale.net/www07/ptc/8e074ab3-fe4e-4e9e-a076-5c7933e54bd7.js":
-		"http://cdn.clicktale.net/www07/ptc/8e074ab3-fe4e-4e9e-a076-5c7933e54bd7.js")+"'%20type='text/javascript'%3E%3C/script%3E"));
-	</script>
-  <script src="js/vendor/jquery.js"></script>
-  <script src="js/foundation.min.js"></script>
-  <script>
+            <section class="main-section">
+                <div class="row" data-equalizer>
+                    <div class="small-12 large-4 columns panel end" data-equalizer-watch>
+                        <a href="http://whycss.com/" target="_blank">
+                            <h3 class="intro-title">PopularFrameworkDemo</h3>
+                        </a>
+                        <p class="intro-max-height">这个是自己弄的一个网站：'按照公司的一套前端页面制作规范来制作的一些基本的前端页面架构，不需要每次都去重新组织'，这个是github的介绍。感兴趣的可以到<a href="http://cody1991.github.io/PopularFrameworkDemo/">Demo页面</a>查看案例展示，也可以到<a href="https://github.com/cody1991/PopularFrameworkDemo">github主页</a>下载</p>
+                        <a href="https://github.com/cody1991/PopularFrameworkDemo" class="button round learn-more" target="_blank">了解更多 &gt;</a>
+                    </div>
+                    <div class="small-12 large-4 columns panel" data-equalizer-watch>
+                        <a href="http://tympanus.net/codrops/" target="_blank">
+                            <h3 class="intro-title">Codrops</h3>
+                        </a>
+                        <p class="intro-max-height">很喜欢codrops这个网站，里面汇集了不少国外的优秀前端开发工程师，网站有许多他们自己开发出来的东西。很多酷炫的效果，如果能在自己的页面上添加上去，肯定让自己的页面加分不少。而还有一个推荐它的更重要的原因是，许多案例他们都提供了或长或短的教程，并且提供了免费源代码的下载，真的是一个学习和找灵感的好地方。</p>
+                        <a href="http://tympanus.net/codrops/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
+                    </div>
+                    <div class="small-12 large-4 columns panel" data-equalizer-watch>
+                        <a href="http://www.noupe.com/" target="_blank">
+                            <h3 class="intro-title">Noupe</h3>
+                        </a>
+                        <p class="intro-max-height">这个网站其实性质和codrops差不多,也是提供了不少的前端学习案例以及免费的代码下载。其实外国很多这样的学习网站，这也是我喜欢逛外国网站的原因之一。开源，分享。不谈论网页的质量，国内不少的网页设置各种积分限制，没有完整的学习教程，这些就有很大的差距了。（只是个人观点）</p>
+                        <a href="http://www.noupe.com/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
+                    </div>
+                </div>
+                <div class="row" data-equalizer>
+                    <div class="small-12 large-4 columns panel" data-equalizer-watch>
+                        <a href="http://ecd.tencent.com/css3/tools.html" target="_blank">
+                            <h3 class="intro-title">动画工具</h3>
+                        </a>
+                        <p class="intro-max-height">CSS3现在在前端来制作动画越来越常见了，而这个网页工具能让你更好的去制作自己的动画。通过简单的滑动条拖动，最后生成代码，它里面还包含了动画库，可以从中需找灵感。另外你也可以自己拖曳图片上去来调整动画效果。这个网站之下还有案例分享和动画手册，真的是学习CSS3动画以及寻找灵感的好地方。</p>
+                        <a href="http://ecd.tencent.com/css3/tools.html" class="button round learn-more" target="_blank">了解更多 &gt;</a>
+                    </div>
+                    <div class="small-12 large-4 columns panel" data-equalizer-watch>
+                        <a href="http://css3lib.alloyteam.com/" target="_blank">
+                            <h3 class="intro-title">CSS3 UI 库</h3>
+                        </a>
+                        <p class="intro-max-height">说到CSS3 UI 库的话，还推荐一下这个网页。它里面有很多的CSS3动画特效，而且都很酷炫。其实它很多的案例都是来自上面所说的codrops网站，感兴趣的可以去看看</p>
+                        <a href="http://css3lib.alloyteam.com/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
+                    </div>
+                    <div class="small-12 large-4 columns panel end" data-equalizer-watch>
+                        <a href="http://whycss.com/" target="_blank">
+                            <h3 class="intro-title">Whycss.com</h3>
+                        </a>
+                        <p class="intro-max-height">"各位朋友如果细心一点会发现在我博客的底部会有一个前端收藏栏目，里面会放一些我遇到的有价值的前端资源链接，但是随着时间的推移，可能积累的资源越来越多，全部放在底部肯定不现实，于是乎，在这个月初，打算把所有积累的前端资源网址做一个聚合的网站，一来可以方便自己的查阅，二来也是给业界各位前端朋友的一些参考。"这段话摘自<a href="http://www.smallni.com/front-end-engineer-site-navigation/">whycss.com作者的博客</a>，很明显可以看出，这个网站也是出于同样的目的。</p>
+                        <a href="http://whycss.com/" class="button round learn-more" target="_blank">了解更多 &gt;</a>
+                    </div>
+
+                </div>
+
+            </section>
+
+            <a class="exit-off-canvas"></a>
+
+        </div>
+    </div>
+
+    <div id="login-in" class="reveal-modal" data-reveal>
+        <form data-abide>
+            <div class="name-field">
+                <label>用户名：
+                    <input type="text" required pattern="[a-zA-Z]+" placeholder="请输入正确的用户名">
+                </label>
+                <small class="error">请输入正确的用户名</small>
+            </div>
+            <div class="password-field">
+                <label>密码：
+                    <input type="password" required placeholder="请输入正确的密码">
+                </label>
+                <small class="error">请输入正确的密码</small>
+            </div>
+            <button type="submit" class="expand">登陆</button>
+        </form>
+        <a class="close-reveal-modal">&#215;</a>
+    </div>
+    <div id="login-up" class="reveal-modal" data-reveal>
+        <form data-abide>
+            <div class="name-field">
+                <label>用户名：
+                    <input type="text" required pattern="[a-zA-Z]+" placeholder="请输入正确的用户名" id="password">
+                </label>
+                <small class="error">请输入注册的用户名</small>
+            </div>
+            <div class="password-field">
+                <label>密码：
+                    <input type="password" required placeholder="请输入正确的密码" pattern="[a-zA-Z]+">
+                </label>
+                <small class="error">请输入密码</small>
+            </div>
+            <div class="password-confirmation-field">
+                <label>密码：
+                    <input type="password" required placeholder="请再次输入密码" pattern="[a-zA-Z]+" data-equalto="password">
+                </label>
+                <small class="error">请保持和上面输入的密码一致</small>
+            </div>
+            <button type="submit" class="expand">注册</button>
+        </form>
+        <a class="close-reveal-modal">&#215;</a>
+    </div>
+
+    <div class="github_page">
+        <a href="https://github.com/cody1991/cody1991.github.io"></a>
+    </div>
+
+
+    <audio src="Secret_Base.mp3" controls autoplay loop class="bgm"></audio>
+    <script type='text/javascript'>
+    document.write(unescape("%3Cscript%20src='" +
+        (document.location.protocol == 'https:' ?
+            "https://cdnssl.clicktale.net/www07/ptc/8e074ab3-fe4e-4e9e-a076-5c7933e54bd7.js" :
+            "http://cdn.clicktale.net/www07/ptc/8e074ab3-fe4e-4e9e-a076-5c7933e54bd7.js") + "'%20type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script>
     $(document).foundation();
-  </script>
-  <script src="js/left-off-canvas-menu.js"></script>
-  <script src="js/basejs.js"></script>
+    </script>
+    <script src="js/left-off-canvas-menu.js"></script>
+    <script src="js/basejs.js"></script>
 </body>
+
 </html>
