--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <section class="main-section">
                 <div class="row" data-equalizer>
                     <div class="small-12 large-4 columns panel end" data-equalizer-watch>
-                        <a href="http://whycss.com/" target="_blank">
+                        <a href="https://github.com/cody1991/PopularFrameworkDemo" target="_blank">
                             <h3 class="intro-title">PopularFrameworkDemo</h3>
                         </a>
                         <p class="intro-max-height">这个是自己弄的一个网站：'按照公司的一套前端页面制作规范来制作的一些基本的前端页面架构，不需要每次都去重新组织'，这个是github的介绍。感兴趣的可以到<a href="http://cody1991.github.io/PopularFrameworkDemo/">Demo页面</a>查看案例展示，也可以到<a href="https://github.com/cody1991/PopularFrameworkDemo">github主页</a>下载</p>
